Tue Aug  9 21:11:54 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in:
	* configure.in: make install fixes

	* movemail.c: fix spelling error
