@@ -6,5 +6,6 @@ KRB_INCLUDE
 AC_HAVE_LIBRARY(socket)
 AC_HAVE_LIBRARY(nsl)
 AC_PROG_INSTALL
+CHECK_FCNTL
 WITH_KRB5ROOT
 AC_OUTPUT(Makefile,[EXTRA_RULES])
