@@ -1,3 +1,10 @@
+Thu Aug 18 14:54:33 1994  Theodore Y. Ts'o  (tytso@dcl)
+
+	* configure.in:
+	* movemail.c: Add NEED_SYS_FCNTL_H
+
+	* Makefile.in: Add $(LIBS) declaration on link line.
+
 Tue Aug  9 21:11:54 1994  Tom Yu  (tlyu@dragons-lair)
 
 	* Makefile.in:
